@@ -2905,6 +2905,7 @@ $1',
 'catseparator'        => '|', # don't translate or duplicate this message to other languages
 'semicolon-separator' => ';', # only translate this message to other languages if you have to change it
 'comma-separator'     => ',&#32;', # only translate this message to other languages if you have to change it
+'colon-separator'     => ':&#32;', # only translate this message to other languages if you have to change it
 
 # Multipage image navigation
 'imgmultipageprev' => '← previous page',
